Replaced data-driven villager trades and loot table entries for hardcoded ones